# relm4-libadwaita-rust-template

./: Cargo.toml  README.md
locales/main/: main.json
src/: main.rs
